# safeuploads

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: copilot-instructions.md
api/: index.html
docs/: CNAME  api.md  index.md
examples/: README.md  fastapi_example.py
safeuploads/: __init__.py  config.py  enums.py  exceptions.py  file_validator.py  utils.py
safeuploads/inspectors/: __init__.py  zip_inspector.py
safeuploads/validators/: __init__.py  base.py  compression_validator.py  extension_validator.py  unicode_validator.py  windows_validator.py
tests/: __init__.py  conftest.py  test_config.py  test_exceptions.py  test_file_validator.py  test_performance.py
tests/inspectors/: __init__.py  test_zip_inspector.py
tests/validators/: test_compression_validator.py  test_extension_validator.py  test_unicode_validator.py  test_windows_validator.py
