[project]
name = "safeuploads"
version = "0.1.0"
description = "A comprehensive file security system for validating uploads and preventing attacks"
authors = [
    {name = "João Vitória Silva",email = "joao@endurain.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-magic (>=0.4.27,<0.5.0)",
    "fastapi (>=0.110,<1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
